Fix Windows component builds: Use component type in gyp build for media_gpu

R=thakis@chromium.org
BUG=608348
TBR=xhwang@chromium.org,piman@chromium.org

Review-Url: https://codereview.chromium.org/1937093002
Cr-Commit-Position: refs/heads/master@{#391014}