media/media.gyp
@@ -1622,7 +1622,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     {
       # GN version: //media/gpu
       'target_name': 'media_gpu',
-      'type': 'static_library',
+      'type': '<(component)',
       'includes': [ 'media_gpu.gypi' ],
     },
   ],
