media/media_gpu.gypi
@@ -246,6 +246,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
       ],
       'conditions': [
         ['use_x11 == 1', {
+          'dependencies': [
+            '../build/linux/system.gyp:x11',
+            '../ui/gfx/x/gfx_x11.gyp:gfx_x11',
+          ],
           'variables': {
             'sig_files': [
               'gpu/va.sigs',
